style: remove body card assignments in css, change variable sizes, change all padding to 8 point rule

--- a/style.css
+++ b/style.css
@@ -8,65 +8,85 @@
     --cor-background: #ffffff ;
     --cor-apoio: #000000 ;
     /* fonts */
+    /* NAO ESQUECECER DE MUDAR A FONTE */
     --font-destaque: Palestone-GrungeShadow ;
     --font-principal: 'Times New Roman', Times, serif;
     --font-apoio: Arial, Helvetica, sans-serif;
    /* text sizes */
-    --font-size-h2-mobile: 3.5vw;
-    --font-size-h2-tablet: 2.5vw;
-    --font-size-h2-desktop: 1.5vw;
+    --font-size: 18px;
     /* logo sizes */
-    --logo-width-mobile: 50%;
-    --logo-width-tablet: 35%;
-    --logo-width-desktop: 25%;
-    /* button sizes */
+    --logo-width-mobile: 45%;
+    --logo-width-tablet: 30%;
+    --logo-width-desktop: 20%;
+    /* button width sizes */
     --button-width-mobile: 75%;
     --button-width-tablet: 75%;
-    --button-width-desktop: 70%;
+    --button-width-desktop: 65%;
 }
 
 @media all {
+    /* geral */
     *{
         box-sizing: border-box;
         margin: 0px;
         padding: 0px;
     }
 
+    /* body */
     body{
         background-color: var(--cor-background);
         background-size: cover;
     }
 
-    h2{
-        color: var(--cor-apoio);
-        font-family: var(--font-apoio);
-        text-align: center;
-        padding: auto; 
-        font-weight: lighter;
-        transition: width 0.5s ease-in-out
+    /* header */
+    header{
+        display:flex;
+        justify-content: space-between;
+        height: 10vh;
+        width: 100vw;
+    }
+    
+    #headerButton{
+        padding: 24px;
+        margin: 16px;
+        /* espacamento 48pts para tornal o botao clicavel */
+        /* LEMBRAR DE COLOCAR A SETA DE VOLTAR COMO HIDE NA HOMEPPAGE */
+    }
+    
+    .button{
+        display: flex;
+        width: 1.8rem;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        /* estilização dos icones  */
     }
 
-    .logo{
-        max-width: 100%;
-        transition: width 0.5s ease-in-out
-    }
-
+    /* main */
     main{
         text-align: center;
         padding: 5px;
         margin: auto;
         background-color: var(--cor-background);
-        width: 90vw;
-        height: 95vh;
-        border-radius: 10px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         margin-bottom: 40px;
     }
 
+    h2{
+        color: var(--cor-apoio);
+        text-align: center;
+        font-family: var(--font-apoio);
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .logo{
+        margin: 32px auto;
+        transition: 0.5s ease-in-out;
+        flex-shrink: 0;
+    }
+
     .FirstButtom, .SecondButtom, .ThirdButtom {
+        flex-shrink: 0;
         background-color: var(--cor-principal);
         border-radius: 10px;
         margin: 8px;
@@ -75,6 +95,7 @@
         align-items: center;
         justify-content: center;
         box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
+        /* verificar o margin no telemovel pq no design ta 16px */
     }
 
     .flex-container {
@@ -102,53 +123,49 @@
 @media screen and (max-width: 767px) {
 
     h2{
-        font-size: var(--font-size-h2-mobile);
+        font-size: var(--font-size);
     }
 
     .logo{
         width: var(--logo-width-mobile);
-        margin: 32px auto;
     }
 
     .FirstButtom, .SecondButtom, .ThirdButtom {
-    height: 9vh;
-    width: var(--button-width-mobile);  
+        height: 9.5vh;
+        width: var(--button-width-mobile);  
     }
    
 }
 /* versão tablet */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 767px) and (max-width: 1024px) {
 
     h2{
-        font-size: var(--font-size-h2-tablet);
+        font-size: var(--font-size);
     }
 
     .logo{
-        width: var(--logo-width-tablet);
-        margin: 32px auto;
-        
+        width: var(--logo-width-tablet);        
     }
 
     .FirstButtom, .SecondButtom, .ThirdButtom {
-        height: 9vh;
+        height: 10vh;
         width: var(--button-width-tablet);
     }
     
 }
 /* versão desktop */
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1024px) {
 
     h2{
-        font-size: var(--font-size-h2-desktop);
+        font-size: var(--font-size);
     }
 
     .logo{
         width: var(--logo-width-desktop);
-        margin: 32px;
     }
 
     .FirstButtom, .SecondButtom, .ThirdButtom {
-        height: 9vh;
+        height: 11vh;
         width: var(--button-width-desktop);
     }
    
