--- a/pages/servicos.css
+++ b/pages/servicos.css
@@ -84,6 +84,13 @@
         font-weight: 400;
     }
 
+    h5{
+        text-decoration: none;
+        color: var(--cor-apoio);
+        padding: 3px;
+        font-family: var(--font-principal);
+    }
+    
     .logo{
         margin: 32px auto;
         transition: 0.5s ease-in-out;
