style: changed padding top for 32px on header

--- a/pages/servicos.css
+++ b/pages/servicos.css
@@ -46,7 +46,7 @@
 
     .headerButton{
         padding: 24px;
-        margin: 40px;
+        margin: 32px 40px;
         /* espacamento 48pts para tornal o botao clicavel */
         /* LEMBRAR DE COLOCAR A SETA DE VOLTAR COMO HIDE NA HOMEPPAGE */
     }
