--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 
     .headerButton{
         padding: 24px;
-        margin-left: 40px;
+        margin: 40px;
         /* espacamento 48pts para tornal o botao clicavel */
         /* LEMBRAR DE COLOCAR A SETA DE VOLTAR COMO HIDE NA HOMEPPAGE */
     }
